--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chorder-tauri",
+  "name": "chorder",
   "version": "0.1.0",
   "description": "",
   "type": "module",
@@ -13,8 +13,11 @@
   "license": "MIT",
   "dependencies": {
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-deep-link": "~2",
     "@tauri-apps/plugin-fs": "~2",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-process": "~2",
+    "@tauri-apps/plugin-shell": "~2",
     "solid-js": "^1.9.3",
     "ts-pattern": "5.6.0"
   },
